# wayfair

./: .gitignore
wayfair_clicker/: Dockerfile  Makefile  README.md  clicker.py  docker-compose.yml  entrypoint.sh  logger.py  manage.py  pyproject.toml  requirements.txt  test.py  token_template.txt  wayfair_responses.json
wayfair_clicker/wayfair_bot/: apps.py  bot.py  models.py
wayfair_clicker/wayfair_bot/management/commands/: bot.py
wayfair_clicker/wayfair_bot/migrations/: 0001_initial.py  0002_order.py  0002_order_token_accept_token_accept_encoding_and_more.py  0002_process_pc_token_process_status.py  0003_delete_order.py
wayfair_clicker/wayfair_clicker/: asgi.py  settings.py  urls.py  wsgi.py
